tests/ui/feature-gates/feature-gate-become_stmt.stderr
error[E0658]: `become` statement is experimental
  --> $DIR/feature-gate-become_stmt.rs:6:5
   |
LL |     become other();
   |     ^^^^^^^^^^^^^^
   |
   = note: see issue #66666 <https://github.com/rust-lang/rust/issues/66666> for more information
   = help: add `#![feature(become_stmt)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
