tests/ui/feature-gates/feature-gate-become_stmt.rs
fn other() {
    println!("Called recursively");
}

fn main() {
    become other(); //~ ERROR `become` statement is experimental
}
